(lang dune 2.9)

(generate_opam_files true)
  (authors "Simon Allocca" "Zhenbo Yan")
  (maintainers "sallocc1@jh.edu")
  (package
   (name connectFour) ; put in your own project name here
   (synopsis "An OCaml library for playing Connect Four")
   (description "This project uses Dream to host a local webpage to play connect four. The
    user can play against an AI that uses trained games to determine moves, and can play
    second or first against it.")
   (depends
    (ounit2 (> 2.0)) ; for each opam dependency list the version
    (core (> 0.14.1)) ; `opam list core` will display which version of core you have
    (dream (= 1.0.0~alpha2))
 ))