(library
  (name board lib)
  (modules board lib)
  (libraries 
    core)
  (preprocess (pps ppx_jane)))

(executable
  (name main)
  (modules main)
  (libraries
    board
    lib
    core))
    ; dream))
    
; (rule
;  (targets template.ml)
;  (deps template.eml.ml)
;  (action (run dream_eml %{deps} --workspace %{workspace_root})))

; (data_only_dirs _esy esy.lock lib node_modules)    
